--- a/public/home/home.html
+++ b/public/home/home.html
@@ -42,11 +42,7 @@
             <p>&copy; 2024 My Book Club</p>
         </footer>
     </div>
-    <script type="module">
-        import { initApp } from "./index.js";
-
-        initApp(document.getElementById("app"));
-    </script>
+    <script type="module" src="home.js"></script>
 
 </body>
 
