--- a/public/register/register.html
+++ b/public/register/register.html
@@ -18,7 +18,7 @@
             
                 <div id="message-container"></div>
 
-                <form id="registration-form">
+                <form name="register" id="registration-form">
                     <label for="username">Username (at least 3 characters):</label>
                     <input type="text" id="username" name="username" minlength="3" required>
 
